--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <h2>Een conflict oplossen</h2>
                         <p>
                             Winnaar:
-                            <span id="winnaar">chuck</span>
+                            <span id="winnaar">joker</span>
                         </p>
                     </div>
                     <div class="meta">
